--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:description" content="過年不知去那買東西？我們幫你整理" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ilovecidu.github.io/2025LNY/" />
-    <meta property="og:image" content="https://ilovecidu.github.io/2025LNY/images/2025meta.jpg" />
+    <meta property="og:image" content="https://ilovecidu.github.io/2025LNY/images/meta.jpg" />
     <meta property="og:image:type" content="image/jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="628" />
@@ -28,7 +28,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
 
-    <link rel="stylesheet" href="css/cidu2025.css">
+    <link rel="stylesheet" href="css/cidu.css">
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
