--- a/index.html
+++ b/index.html
@@ -192,6 +192,27 @@
                             }
                         },
 
+                         {
+                                                    cate: '其',
+                                                    name: '七堵社區體能館',
+                                                    businessDays: [
+                                                        { date: '01/27(一)', time: '正常營業' },
+                                                        // { date: '01/28 除夕', time: '正常營業' },
+                                                        // { date: '01/29 初一', time: '正常營業' },
+                                                        // { date: '01/30 初二', time: '正常營業' },
+                                                        // { date: '01/31 初三', time: '正常營業' },
+                                                        // { date: '02/01 初四', time: '正常營業' },
+                                                        // { date: '02/02 初五', time: '正常營業' },
+                                                    ],
+                                                    note: '01/27(一)無下午公益時段',
+                                                    socialLinks: {
+                                                        facebook: 'https://www.facebook.com/QiduDFC',
+                                                        // instagram: '#',
+                                                        // customLink:'#',
+                                                        map: 'https://maps.app.goo.gl/qoX5w2F1Lt26K3Nx9'
+                                                    }
+                                                },
+
                         //  {
                         //                             cate: '其',
                         //                             name: '名',
