--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                             socialLinks: {
                                 facebook: 'https://www.facebook.com/Bobonailstudio/',
                                 instagram: 'https://www.instagram.com/bobonail_studio/',
-                                customLink: 'https://lin.ee/XMYoXWx',
+                                line: 'https://lin.ee/XMYoXWx',
                                 map: 'https://g.co/kgs/sD3wCVu'
                             }
                         },
