--- a/index.html
+++ b/index.html
@@ -234,6 +234,69 @@
                             }
                         },
 
+                        {
+                            cate: '其',
+                            name: '立可得眼鏡',
+                            businessDays: [
+                                { date: '01/27(一)', time: '正常營業' },
+                                { date: '01/28 除夕', time: '10:30AM~3PM' },
+                                // { date: '01/29 初一', time: '' },
+                                // { date: '01/30 初二', time: '' },
+                                // { date: '01/31 初三', time: '' },
+                                // { date: '02/01 初四', time: '' },
+                                { date: '02/02 初五', time: '10:30AM~5PM' },
+                            ],
+                            note: '',
+                            socialLinks: {
+                                facebook: 'https://www.facebook.com/LICODR',
+                                // instagram: '',
+                                // line: '',
+                                map: 'https://g.co/kgs/sr7ZW7B'
+                            }
+                        },
+
+                        {
+                            cate: '醫',
+                            name: '正光診所',
+                            businessDays: [
+                                { date: '01/27(一)', time: '正常營業' },
+                                { date: '01/28 除夕', time: '僅早診' },
+                                // { date: '01/29 初一', time: '' },
+                                // { date: '01/30 初二', time: '' },
+                                // { date: '01/31 初三', time: '' },
+                                // { date: '02/01 初四', time: '' },
+                                // { date: '02/02 初五', time: '' },
+                            ],
+                            note: '春節休診不營業',
+                            socialLinks: {
+                                facebook: 'https://www.facebook.com/JustandBrightclinic/',
+                                // instagram: '',
+                                line: 'https://page.line.me/037uujcg',
+                                map: 'https://g.co/kgs/YYFu988'
+                            }
+                        },
+
+                        {
+                            cate: '吃',
+                            name: '朶雨',
+                            businessDays: [
+                                // { date: '01/27(一)', time: '' },
+                                // { date: '01/28 除夕', time: '' },
+                                { date: '01/29 初一', time: '11AM~7PM' },
+                                { date: '01/30 初二', time: '11AM~7PM' },
+                                { date: '01/31 初三', time: '11AM~7PM' },
+                                { date: '02/01 初四', time: '11AM~7PM' },
+                                { date: '02/02 初五', time: '11AM~7PM' },
+                            ],
+                            note: '小年夜固定公休、除夕休息，春節期間無供應餐食，沙拉及輕食正常供應',
+                            socialLinks: {
+                                facebook: 'https://www.facebook.com/profile.php?id=100094110319325',
+                                instagram: 'https://www.instagram.com/doyu_cafe',
+                                // line: '',
+                                map: 'https://g.co/kgs/quE7wZS'
+                            }
+                        },
+
                         //  {
                         //                             cate: '其',
                         //                             name: '名',
@@ -250,6 +313,7 @@
                         //                             socialLinks: {
                         //                                 facebook: '#',
                         //                                 instagram: '#',
+                        //                                 line:'',
                         //                                 customLink:'#',
                         //                                 map: '#'
                         //                             }
