--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                 // instagram: '',
                                 // line: '',
                                 customLink: 'https://order.nidin.shop/menu/2643',
-                                map: 'https://www.google.com/maps/place/206%E5%9F%BA%E9%9A%86%E5%B8%82%E4%B8%83%E5%A0%B5%E5%8D%80%E6%98%8E%E5%BE%B7%E4%B8%80%E8%B7%AF196%E8%99%9F/data=!4m2!3m1!1s0x345d5218a6c9322b:0x246257c3c7a44fae?sa=X&ved=2ahUKEwjHzbyLxZCEAxX7Z_UHHcriCMcQ8gF6BAgREAA'
+                                map: 'https://maps.app.goo.gl/VpmGXcTTQdU1fTB3A'
                             }
                         },
 
@@ -144,7 +144,7 @@
                                 //   instagram: '',
                                 // line: '',
                                 // customLink:'',
-                                map: 'https://www.google.com/maps/place/TEA+TOP%E7%AC%AC%E4%B8%80%E5%91%B3+%E4%B8%83%E5%A0%B5%E6%98%8E%E5%BE%B7%E5%BA%97/@25.0930831,121.6751377,13z/data=!4m10!1m2!2m1!1steatop!3m6!1s0x345d53619e2a8ff7:0x8b7690236341f1e9!8m2!3d25.0974072!4d121.7128261!15sCgZ0ZWF0b3AiA4gBAVoIIgZ0ZWF0b3CSARhpY2VfY3JlYW1fYW5kX2RyaW5rX3Nob3DgAQA!16s%2Fg%2F11sd6sx1f6?entry=ttu'
+                                map: 'https://maps.app.goo.gl/zrdhnfZWUKi8ZZYu6'
                             }
                         },
 
@@ -230,7 +230,7 @@
                                 facebook: 'https://www.facebook.com/Bobonailstudio/',
                                 instagram: 'https://www.instagram.com/bobonail_studio/',
                                 line: 'https://lin.ee/XMYoXWx',
-                                map: 'https://g.co/kgs/sD3wCVu'
+                                map: 'https://maps.app.goo.gl/xvbiKXkHdiKNdEMX6'
                             }
                         },
 
@@ -251,7 +251,7 @@
                                 facebook: 'https://www.facebook.com/LICODR',
                                 // instagram: '',
                                 // line: '',
-                                map: 'https://g.co/kgs/sr7ZW7B'
+                                map: 'https://maps.app.goo.gl/EtGM8goF7NJd7TDP7'
                             }
                         },
 
@@ -259,20 +259,20 @@
                             cate: '醫',
                             name: '正光診所',
                             businessDays: [
-                                { date: '01/27(一)', time: '正常營業' },
-                                { date: '01/28 除夕', time: '僅早診' },
+                                { date: '01/27(一)', time: '8AM~12PM 1:30PM~9:30PM' },
+                                { date: '01/28 除夕', time: '8AM~12PM' },
                                 // { date: '01/29 初一', time: '' },
                                 // { date: '01/30 初二', time: '' },
                                 // { date: '01/31 初三', time: '' },
                                 // { date: '02/01 初四', time: '' },
                                 // { date: '02/02 初五', time: '' },
                             ],
-                            note: '春節休診不營業',
+                            note: '',
                             socialLinks: {
                                 facebook: 'https://www.facebook.com/JustandBrightclinic/',
                                 // instagram: '',
                                 line: 'https://page.line.me/037uujcg',
-                                map: 'https://g.co/kgs/YYFu988'
+                                map: 'https://maps.app.goo.gl/UEA8exJP5gs2tHtE8'
                             }
                         },
 
@@ -293,7 +293,139 @@
                                 facebook: 'https://www.facebook.com/profile.php?id=100094110319325',
                                 instagram: 'https://www.instagram.com/doyu_cafe',
                                 // line: '',
-                                map: 'https://g.co/kgs/quE7wZS'
+                                map: 'https://maps.app.goo.gl/JkgwWzKhKJjPR3Py9'
+                            }
+                        },
+
+
+                        {
+                            cate: '醫',
+                            name: '群健診所',
+                            businessDays: [
+                                { date: '01/27(一)', time: '8AM~12PM 6:30PM~9:30PM' },
+                                { date: '01/28 除夕', time: '8AM~12PM' },
+                                // { date: '01/29 初一', time: '' },
+                                // { date: '01/30 初二', time: '' },
+                                // { date: '01/31 初三', time: '' },
+                                // { date: '02/01 初四', time: '' },
+                                // { date: '02/02 初五', time: '' },
+                            ],
+                            note: '',
+                            socialLinks: {
+                                // facebook: '',
+                                // instagram: '',
+                                // line: '',
+                                map: 'https://maps.app.goo.gl/iaqhgFJJMshSuhpG9'
+                            }
+                        },
+
+
+                        {
+                            cate: '醫',
+                            name: '佑仁診所',
+                            businessDays: [
+                                { date: '01/27(一)', time: '8AM~12PM 2PM~5:30 6:30PM~9:30PM' },
+                                { date: '01/28 除夕', time: '8AM~12PM' },
+                                // { date: '01/29 初一', time: '' },
+                                // { date: '01/30 初二', time: '' },
+                                // { date: '01/31 初三', time: '' },
+                                // { date: '02/01 初四', time: '' },
+                                // { date: '02/02 初五', time: '' },
+                            ],
+                            note: '',
+                            socialLinks: {
+                                // facebook: '',
+                                // instagram: '',
+                                // line: '',
+                                map: 'https://maps.app.goo.gl/5fuXyrC8X1pDi6LB7'
+                            }
+                        },
+
+
+                        {
+                            cate: '醫',
+                            name: '廖內兒科診所',
+                            businessDays: [
+                                { date: '01/27(一)', time: '8AM~12PM 3PM~8:30PM' },
+                                { date: '01/28 除夕', time: '8AM~12PM 3PM~8:30PM' },
+                                // { date: '01/29 初一', time: '' },
+                                // { date: '01/30 初二', time: '' },
+                                // { date: '01/31 初三', time: '' },
+                                { date: '02/01 初四', time: '8AM~12PM 3PM~5PM' },
+                                // { date: '02/02 初五', time: '' },
+                            ],
+                            note: '',
+                            socialLinks: {
+                                // facebook: '',
+                                // instagram: '',
+                                // line: '',
+                                map: 'https://maps.app.goo.gl/P6KY2otRCcD2DDbD6'
+                            }
+                        },
+
+
+                        {
+                            cate: '醫',
+                            name: '西華診所',
+                            businessDays: [
+                                { date: '01/27(一)', time: '8:30AM~12PM 3PM~9:30PM' },
+                                { date: '01/28 除夕', time: '8:30AM~12PM' },
+                                // { date: '01/29 初一', time: '' },
+                                // { date: '01/30 初二', time: '' },
+                                // { date: '01/31 初三', time: '' },
+                                { date: '02/01 初四', time: '' },
+                                { date: '02/02 初五', time: '' },
+                            ],
+                            note: '',
+                            socialLinks: {
+                                // facebook: '',
+                                // instagram: '',
+                                // line: '',
+                                map: 'https://maps.app.goo.gl/pKxgoV4YrHJ2ahSV7'
+                            }
+                        },
+
+
+                        {
+                            cate: '醫',
+                            name: '紀醫師診所',
+                            businessDays: [
+                                { date: '01/27(一)', time: '7AM~12PM 1:30PM~5PM 5:30PM~9:30PM' },
+                                { date: '01/28 除夕', time: '7:30AM~12PM' },
+                                // { date: '01/29 初一', time: '' },
+                                // { date: '01/30 初二', time: '' },
+                                // { date: '01/31 初三', time: '' },
+                                { date: '02/01 初四', time: '7:30AM~11:30AM' },
+                                { date: '02/02 初五', time: '7:30AM~3:30PM' },
+                            ],
+                            note: '',
+                            socialLinks: {
+                                // facebook: '',
+                                // instagram: '',
+                                // line: '',
+                                map: 'https://maps.app.goo.gl/aZbAdMUxRPiG94yt8'
+                            }
+                        },
+
+
+                        {
+                            cate: '醫',
+                            name: '杏福診所',
+                            businessDays: [
+                                { date: '01/27(一)', time: '8:30AM~12PM 3PM~6PM 6:30PM~9PM' },
+                                { date: '01/28 除夕', time: '7:30AM~12PM' },
+                                // { date: '01/29 初一', time: '' },
+                                // { date: '01/30 初二', time: '' },
+                                // { date: '01/31 初三', time: '' },
+                                // { date: '02/01 初四', time: '' },
+                                // { date: '02/02 初五', time: '' },
+                            ],
+                            note: '',
+                            socialLinks: {
+                                // facebook: '',
+                                // instagram: '',
+                                // line: '',
+                                map: 'https://maps.app.goo.gl/LcSVu85mT2UFnwtc9'
                             }
                         },
 
@@ -353,7 +485,7 @@
       <div class="card-body">
         <div class="row">
           ${card.businessDays.map(day => `
-            <div class="col-6 mb-1">
+            <div class="col-md-6 mb-1">
               <div class="d-flex align-items-center">
                 <div class="card-date">${day.date}</div>
                 <div class="card-time">${day.time}</div>
