--- a/index.html
+++ b/index.html
@@ -429,6 +429,28 @@
                             }
                         },
 
+
+                        {
+                            cate: '其',
+                            name: '光旅Light Travel Glasses',
+                            businessDays: [
+                                { date: '01/27(一)', time: '正常營業' },
+                                { date: '01/28 除夕', time: '12PM~5PM' },
+                                { date: '01/29 初一', time: '12PM~5PM' },
+                                { date: '01/30 初二', time: '12PM~5PM' },
+                                { date: '01/31 初三', time: '12PM~5PM' },
+                                { date: '02/01 初四', time: '正常營業' },
+                                { date: '02/02 初五', time: '正常營業' },
+                            ],
+                            note: '過年眼鏡舊換新，來光旅配鏡滿千就贈送刮刮卡一張，數量有限送完為止',
+                            socialLinks: {
+                                facebook: 'https://www.facebook.com/profile.php?id=61559784263481',
+                                instagram: 'https://www.instagram.com/ligh_t94326',
+                                // line: '',
+                                map: 'https://maps.app.goo.gl/yZYvXRWU9AX9Le62A'
+                            }
+                        },
+
                         //  {
                         //                             cate: '其',
                         //                             name: '名',
