--- a/index.html
+++ b/index.html
@@ -451,6 +451,50 @@
                             }
                         },
 
+
+                        {
+                            cate: '吃',
+                            name: '快樂QQ球',
+                            businessDays: [
+                                { date: '01/27(一)', time: '3:30PM~10PM' },
+                                // { date: '01/28 除夕', time: '' },
+                                { date: '01/29 初一', time: '3:30PM~10PM' },
+                                // { date: '01/30 初二', time: '' },
+                                { date: '01/31 初三', time: '3:30PM~10PM' },
+                                { date: '02/01 初四', time: '3:30PM~10PM' },
+                                { date: '02/02 初五', time: '3:30PM~10PM' },
+                            ],
+                            note: '',
+                            socialLinks: {
+                                // facebook: '',
+                                // instagram: '',
+                                // line: '',
+                                map: 'https://maps.app.goo.gl/n6ZZPHDa7a4oGR4M8'
+                            }
+                        },
+
+
+                        {
+                            cate: '喝',
+                            name: 'Comebuy',
+                            businessDays: [
+                                { date: '01/27(一)', time: '10AM~10PM' },
+                                { date: '01/28 除夕', time: '10AM~5PM' },
+                                { date: '01/29 初一', time: '10AM~9PM' },
+                                { date: '01/30 初二', time: '10AM~9PM' },
+                                { date: '01/31 初三', time: '10AM~9PM' },
+                                { date: '02/01 初四', time: '10AM~9PM' },
+                                { date: '02/02 初五', time: '10AM~8PM' },
+                            ],
+                            note: '',
+                            socialLinks: {
+                                // facebook: '',
+                                // instagram: '',
+                                // line: '',
+                                map: 'https://maps.app.goo.gl/umFS5iwLXsFaMHAt7'
+                            }
+                        },
+
                         //  {
                         //                             cate: '其',
                         //                             name: '名',
