--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
                             cate: '喝',
                             name: 'CoCo都可七堵店',
                             businessDays: [
-                                { date: '01/27(一)', time: '正常營業' },
-                                { date: '01/28 除夕', time: '10:30AM~6:00PM' },
-                                { date: '01/29 初一', time: '11:00AM~8:00PM' },
-                                { date: '01/30 初二', time: '11:00AM~8:00PM' },
+                                { date: '01/27(一)', time: '10AM~9:30PM' },
+                                { date: '01/28 除夕', time: '10:30AM~6PM' },
+                                { date: '01/29 初一', time: '11AM~8PM' },
+                                { date: '01/30 初二', time: '11AM~8PM' },
                                 // { date: '01/31 初三', time: '' },
-                                { date: '02/01 初四', time: '正常營業' },
-                                { date: '02/02 初五', time: '正常營業' },
+                                { date: '02/01 初四', time: '10AM~9:30PM' },
+                                { date: '02/02 初五', time: '10AM~9:30PM' },
                             ],
-                            note: '郵局對面，可線上訂',
+                            note: '',
                             socialLinks: {
                                 facebook: 'https://www.facebook.com/p/CoCo%E9%83%BD%E5%8F%AF%E4%B8%83%E5%A0%B5%E5%BA%97-100070373012450/',
                                 // instagram: '',
@@ -492,6 +492,29 @@
                                 // instagram: '',
                                 // line: '',
                                 map: 'https://maps.app.goo.gl/umFS5iwLXsFaMHAt7'
+                            }
+                        },
+
+
+                        {
+                            cate: '喝',
+                            name: 'DrinkStore水雲朵',
+                            businessDays: [
+                                { date: '01/27(一)', time: '10AM~10PM' },
+                                { date: '01/28 除夕', time: '11AM~5PM' },
+                                { date: '01/29 初一', time: '11AM~10PM' },
+                                { date: '01/30 初二', time: '11AM~10PM' },
+                                { date: '01/31 初三', time: '11AM~10PM' },
+                                { date: '02/01 初四', time: '11AM~10PM' },
+                                { date: '02/02 初五', time: '11AM~10PM' },
+                            ],
+                            note: '',
+                            socialLinks: {
+                                // facebook: '',
+                                // instagram: '',
+                                // line: '',
+                                customLink:'https://eats.quickclick.cc/togo?p=DrinkStore',
+                                map: 'https://maps.app.goo.gl/ZJeTTNR2EM3tvWK58'
                             }
                         },
 
