--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                 { date: '02/01 初四', time: '10AM~9:30PM' },
                                 { date: '02/02 初五', time: '10AM~9:30PM' },
                             ],
-                            note: '',
+                            note: '可線上訂',
                             socialLinks: {
                                 facebook: 'https://www.facebook.com/p/CoCo%E9%83%BD%E5%8F%AF%E4%B8%83%E5%A0%B5%E5%BA%97-100070373012450/',
                                 // instagram: '',
