--- a/index.html
+++ b/index.html
@@ -527,9 +527,9 @@
                                 // { date: '01/28 除夕', time: '' },
                                 // { date: '01/29 初一', time: '' },
                                 // { date: '01/30 初二', time: '' },
-                                { date: '01/31 初三', time: '10AM~10PM' },
-                                { date: '02/01 初四', time: '10AM~10PM' },
-                                { date: '02/02 初五', time: '10AM~10PM' },
+                                { date: '01/31 初三', time: '10:30AM~7PM' },
+                                { date: '02/01 初四', time: '10:30AM~7PM' },
+                                { date: '02/02 初五', time: '10:30AM~7PM' },
                             ],
                             note: '',
                             socialLinks: {
@@ -538,6 +538,29 @@
                                 // line: '',
                                 // customLink:'',
                                 map: 'https://maps.app.goo.gl/RB7ySgSdaX92VB6U9'
+                            }
+                        },
+
+
+                        {
+                            cate: '吃',
+                            name: '阿玉米粉湯',
+                            businessDays: [
+                                // { date: '01/27(一)', time: '' },
+                                // { date: '01/28 除夕', time: '' },
+                                // { date: '01/29 初一', time: '' },
+                                // { date: '01/30 初二', time: '' },
+                                { date: '01/31 初三', time: '10AM~10PM' },
+                                { date: '02/01 初四', time: '10AM~10PM' },
+                                { date: '02/02 初五', time: '10AM~10PM' },
+                            ],
+                            note: '全聯隔壁，歡迎訂購0919021951',
+                            socialLinks: {
+                                // facebook: '',
+                                // instagram: '',
+                                // line: '',
+                                // customLink:'',
+                                map: 'https://maps.app.goo.gl/T413KdSkBTXDgxFf7'
                             }
                         },
 
