--- a/index.html
+++ b/index.html
@@ -587,6 +587,75 @@
                             }
                         },
 
+
+                        {
+                            cate: '吃',
+                            name: '易粒堡早餐店',
+                            businessDays: [
+                                { date: '01/27(一)', time: '5AM~2PM' },
+                                { date: '01/28 除夕', time: '5AM~2PM' },
+                                { date: '01/29 初一', time: '5AM~2PM' },
+                                { date: '01/30 初二', time: '5AM~2PM' },
+                                { date: '01/31 初三', time: '5AM~2PM' },
+                                { date: '02/01 初四', time: '5AM~2PM' },
+                                { date: '02/02 初五', time: '5AM~2PM' },
+                            ],
+                            note: '過年期間照常營業',
+                            socialLinks: {
+                                // facebook: '',
+                                // instagram: '',
+                                // line: '',
+                                // customLink:'',
+                                map: 'https://maps.app.goo.gl/6HSuFbvY7jgf5CTD8'
+                            }
+                        },
+
+
+                        {
+                            cate: '吃',
+                            name: '狠饗吃複合式餐飲',
+                            businessDays: [
+                                { date: '01/27(一)', time: '11AM~10PM' },
+                                // { date: '01/28 除夕', time: '' },
+                                // { date: '01/29 初一', time: '' },
+                                // { date: '01/30 初二', time: '' },
+                                { date: '01/31 初三', time: '11AM~10PM' },
+                                { date: '02/01 初四', time: '11AM~10PM' },
+                                { date: '02/02 初五', time: '11AM~10PM' },
+                            ],
+                            note: '',
+                            socialLinks: {
+                                // facebook: '',
+                                // instagram: '',
+                                line: 'https://line.me/R/ti/p/@606cohud',
+                                // customLink:'',
+                                map: 'https://maps.app.goo.gl/zkF4N2TrnAEWaWadA'
+                            }
+                        },
+
+
+                        {
+                            cate: '其',
+                            name: 'Pure Hair Salon 純淨髮藝',
+                            businessDays: [
+                                { date: '01/27(一)', time: '10AM~8PM' },
+                                { date: '01/28 除夕', time: '10AM~8PM' },
+                                { date: '01/29 初一', time: '10AM~8PM' },
+                                { date: '01/30 初二', time: '10AM~8PM' },
+                                // { date: '01/31 初三', time: '' },
+                                // { date: '02/01 初四', time: '' },
+                                { date: '02/02 初五', time: '10AM~6PM' },
+                            ],
+                            note: '過年期間漲$200',
+                            socialLinks: {
+                                facebook: 'https://www.facebook.com/wenniesalon',
+                                // instagram: '',
+                                line: 'https://line.me/R/ti/p/@903ztuzn',
+                                // customLink:'',
+                                map: 'https://maps.app.goo.gl/kewEY3yLixBqQkHh6'
+                            }
+                        },
+
                         //  {
                         //                             cate: '其',
                         //                             name: '名',
