--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                             name: '七堵室內兒童樂園',
                             businessDays: [
                                 { date: '01/27(一)', time: '正常營業' },
-                                // { date: '01/28 除夕', time: '春節服務' },
+                                // { date: '01/28 除夕', time: '' },
                                 { date: '01/29 初一', time: '春節服務' },
                                 { date: '01/30 初二', time: '春節服務' },
                                 { date: '01/31 初三', time: '春節服務' },
@@ -196,7 +196,7 @@
                             cate: '其',
                             name: '七堵社區體能館',
                             businessDays: [
-                                { date: '01/27(一)', time: '正常營業' },
+                                { date: '01/27(一)', time: '8AM~8PM' },
                                 // { date: '01/28 除夕', time: '正常營業' },
                                 // { date: '01/29 初一', time: '正常營業' },
                                 // { date: '01/30 初二', time: '正常營業' },
@@ -219,13 +219,13 @@
                             businessDays: [
                                 { date: '01/27(一)', time: '正常營業' },
                                 { date: '01/28 除夕', time: '9AM~6PM' },
-                                { date: '01/29 初一', time: '10AM~5PM(可預約加開時段)' },
-                                { date: '01/30 初二', time: '10AM~5PM(可預約加開時段)' },
-                                { date: '01/31 初三', time: '10AM~5PM(可預約加開時段)' },
+                                { date: '01/29 初一', time: '10AM~5PM' },
+                                { date: '01/30 初二', time: '10AM~5PM' },
+                                { date: '01/31 初三', time: '10AM~5PM' },
                                 // { date: '02/01 初四', time: '正常營業' },
                                 // { date: '02/02 初五', time: '正常營業' },
                             ],
-                            note: '',
+                            note: '初一到初三可預約加開時段',
                             socialLinks: {
                                 facebook: 'https://www.facebook.com/Bobonailstudio/',
                                 instagram: 'https://www.instagram.com/bobonail_studio/',
@@ -373,8 +373,8 @@
                                 // { date: '01/29 初一', time: '' },
                                 // { date: '01/30 初二', time: '' },
                                 // { date: '01/31 初三', time: '' },
-                                { date: '02/01 初四', time: '' },
-                                { date: '02/02 初五', time: '' },
+                                // { date: '02/01 初四', time: '' },
+                                // { date: '02/02 初五', time: '' },
                             ],
                             note: '',
                             socialLinks: {
