--- a/index.html
+++ b/index.html
@@ -656,6 +656,29 @@
                             }
                         },
 
+
+                        {
+                            cate: '吃',
+                            name: '蘇家米苔目',
+                            businessDays: [
+                                { date: '01/27(一)', time: '6AM~12:30PM' },
+                                { date: '01/28 除夕', time: '6AM~12:30PM' },
+                                // { date: '01/29 初一', time: '' },
+                                // { date: '01/30 初二', time: '' },
+                                // { date: '01/31 初三', time: '' },
+                                // { date: '02/01 初四', time: '' },
+                                // { date: '02/02 初五', time: '' },
+                            ],
+                            note: '',
+                            socialLinks: {
+                                facebook: 'https://www.facebook.com/Qidu.su',
+                                // instagram: '',
+                                // line: '',
+                                // customLink:'',
+                                map: 'https://maps.app.goo.gl/Pga9LLpBPZTnzLri9'
+                            }
+                        },
+
                         //  {
                         //                             cate: '其',
                         //                             name: '名',
