--- a/index.html
+++ b/index.html
@@ -679,6 +679,30 @@
                             }
                         },
 
+
+
+                        {
+                            cate: '吃',
+                            name: '食在鱻海鮮麵',
+                            businessDays: [
+                                // { date: '01/27(一)', time: '' },
+                                // { date: '01/28 除夕', time: '' },
+                                { date: '01/29 初一', time: '11AM~11PM' },
+                                { date: '01/30 初二', time: '11AM~11PM' },
+                                { date: '01/31 初三', time: '11AM~11PM' },
+                                { date: '02/01 初四', time: '11AM~11PM' },
+                                { date: '02/02 初五', time: '11AM~11PM' },
+                            ],
+                            note: '',
+                            socialLinks: {
+                                facebook: 'https://www.facebook.com/profile.php?id=61558107634669',
+                                // instagram: '',
+                                // line: '',
+                                // customLink:'',
+                                map: 'https://maps.app.goo.gl/Wv7ZiBv84jniuZXx8'
+                            }
+                        },
+
                         //  {
                         //                             cate: '其',
                         //                             name: '名',
