--- a/index.html
+++ b/index.html
@@ -703,6 +703,31 @@
                             }
                         },
 
+
+
+
+                        {
+                            cate: '吃',
+                            name: '皇冠果汁·雞蛋糕',
+                            businessDays: [
+                                { date: '01/27(一)', time: '9AM~3PM' },
+                                { date: '01/28 除夕', time: '9AM~3PM' },
+                                { date: '01/29 初一', time: '10AM~4PM' },
+                                { date: '01/30 初二', time: '10AM~4PM' },
+                                // { date: '01/31 初三', time: '' },
+                                { date: '02/01 初四', time: '10AM~4PM' },
+                                { date: '02/02 初五', time: '10AM~4PM' },
+                            ],
+                            note: '地址是南興路，但店面是在自治街(全家自治店對面)',
+                            socialLinks: {
+                                facebook: 'https://www.facebook.com/profile.php?id=100040931546911',
+                                // instagram: '',
+                                // line: '',
+                                // customLink:'',
+                                map: 'https://maps.app.goo.gl/nVrggrjH9wHKsfoE8'
+                            }
+                        },
+
                         //  {
                         //                             cate: '其',
                         //                             name: '名',
