--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
                             socialLinks: {
                                 facebook: 'https://www.facebook.com/profile.php?id=100040931546911',
                                 // instagram: '',
-                                // line: '',
+                                 line: 'https://lin.ee/nWXN2TU',
                                 // customLink:'',
                                 map: 'https://maps.app.goo.gl/nVrggrjH9wHKsfoE8'
                             }
