--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
                             ],
                             note: '',
                             socialLinks: {
-                                // facebook: '',
+                               facebook: 'https://www.facebook.com/profile.php?id=61562000043174',
                                 // instagram: '',
                                 line: 'https://line.me/R/ti/p/@606cohud',
                                 // customLink:'',
@@ -725,6 +725,32 @@
                                  line: 'https://lin.ee/nWXN2TU',
                                 // customLink:'',
                                 map: 'https://maps.app.goo.gl/nVrggrjH9wHKsfoE8'
+                            }
+                        },
+
+
+
+
+
+                        {
+                            cate: '吃',
+                            name: '上毅美食炸雞',
+                            businessDays: [
+                                { date: '01/27(一)', time: '12PM~售完為止' },
+                                // { date: '01/28 除夕', time: '' },
+                                // { date: '01/29 初一', time: '' },
+                                // { date: '01/30 初二', time: '' },
+                                // { date: '01/31 初三', time: '' },
+                                { date: '02/01 初四', time: '3PM~11PM' },
+                                { date: '02/02 初五', time: '3PM~11PM' },
+                            ],
+                            note: '',
+                            socialLinks: {
+                                facebook: 'https://www.facebook.com/profile.php?id=100063662696675',
+                                // instagram: '',
+                                 line: '',
+                                // customLink:'',
+                                map: 'https://maps.app.goo.gl/6P1aGy1pK75od6PZ7'
                             }
                         },
 
