--- a/index.html
+++ b/index.html
@@ -734,9 +734,9 @@
 
                         {
                             cate: '吃',
-                            name: '上毅美食炸雞',
+                            name: '上毅美食炸雞七堵總店',
                             businessDays: [
-                                { date: '01/27(一)', time: '12PM~售完為止' },
+                                { date: '01/27(一)', time: '12PM~賣完為止' },
                                 // { date: '01/28 除夕', time: '' },
                                 // { date: '01/29 初一', time: '' },
                                 // { date: '01/30 初二', time: '' },
